--- a/.github/workflows/demo-server.yml
+++ b/.github/workflows/demo-server.yml
@@ -1,10 +1,10 @@
-name: Dev Server
+name: Demo Server
 
 on:
   push:
-    # Publish `dev` as Docker `latest` image.
+    # Publish `main` as Docker `latest` image.
     branches:
-      - dev
+      - main
     # Publish `v1.2.3` tags as releases.
     tags:
       - v*
@@ -13,7 +13,7 @@ on:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: dev-server
+  IMAGE_NAME: demo-server
 
 jobs:
   build:
